Fri Aug 28 18:10:00 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cavern.sgml: Fix broken SGML from previous commit.

Fri Aug 28 05:53:00 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cavern.sgml,doc/manual.sgml,lib/,src/: Drop support for showing
	  percentage progress in cavern.  It's confusing in a multiple-file
	  dataset as it shows progress in the current file so jumps around.
	  It also slows down processing, and on a slow machine you'd don't
	  want that, while on a fast machine processing isn't slow enough for
	  the progress display to be useful.

Fri Aug 28 05:28:38 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml,survex.iss.in: Process survey data with aven rather
	  than running cavern.

Sat Aug 22 21:14:40 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Use fancy quotes.

Wed Aug 19 14:08:14 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Merge translation updates from Michel Bovey.

Mon Aug 17 08:32:18 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.22.

Thu Aug 13 16:12:06 GMT 2015  Olly Betts <olly@survex.com>

	* lib/: Update source references and merge po files.

Thu Aug 13 16:11:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Correct an example in a TRANSLATORS comment.

Wed Aug 12 19:46:34 GMT 2015  Olly Betts <olly@survex.com>

	* src/readval.c: Anonymous stations can't be exported, so we don't need
	  to set them up ready for implicit exports.

Tue Aug 11 21:31:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/Makefile.am,tests/cavern.tst,
	  tests/cmd_set_bad.out: Improve errors for invalid survey names in
	  *equate and *export.

Tue Aug 11 20:34:05 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/cmd_begin_bad.out,tests/cmd_begin_bad.svx:
	  Improve error when *begin is followed by an invalid survey name.

Tue Aug 11 20:02:31 GMT 2015  Olly Betts <olly@survex.com>
